fixed the index slider and main.js

--- a/index.html
+++ b/index.html
@@ -86,13 +86,11 @@
           style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(./img/hero_img/hero_img_2.webp)">
           <!-- <div class="hero_media"><img src="./img/hero_img/hero_img_2.jpg" alt="hero img 2"></div> -->
           <div class="hero_desc container">
-            <h2 class="hero_desc-title fw-bold uppercase text-neutral-100 textCenter">Institution</h2>
-            <form action="" class="FormFileUpload">
-              <div>
-                <input type="file" name="file" id="file">
-              </div>
-              <button type="submit" class="btn">Upload</button>
-            </form>
+            <h2 class="hero_desc-title fw-bold uppercase text-neutral-100 textCenter">Institution
+            </h2>
+            <p class="hero_desc-work fw-semi-bold uppercase text-neutral-100 textCenter">
+              Photography</p>
+            <a href="./portfolios/institutuins.html" class="btn uppercase">see more</a>
           </div>
         </div>
 
@@ -185,7 +183,7 @@
 
   <!-- TODO User Scripts -->
   <script src="slick.js"></script>
-  <script type="module" src=" ./main.js"></script>
+  <script src="main.js"></script>
 
 
 </body>
